--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.1.3"
 djangorestframework = "^3.15.2"
+yfinance = "^0.2.50"
+ipykernel = "^6.29.5"
+drf-spectacular = "^0.27.2"
 
 
 [build-system]
