--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.15.2"
 yfinance = "^0.2.50"
 ipykernel = "^6.29.5"
 drf-spectacular = "^0.27.2"
+gunicorn = "^23.0.0"
 
 
 [build-system]
