--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ yfinance = "^0.2.50"
 ipykernel = "^6.29.5"
 drf-spectacular = "^0.27.2"
 gunicorn = "^23.0.0"
+whitenoise = "^6.8.2"
 
 
 [build-system]
