--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ipykernel = "^6.29.5"
 drf-spectacular = "^0.27.2"
 gunicorn = "^23.0.0"
 whitenoise = "^6.8.2"
+django-filter = "^24.3"
 
 
 [build-system]
